# booster_robotics_sdk

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml  pixi.toml
example/high_level/: b1_7dof_arm_sdk_example.cpp  b1_arm_sdk_example.cpp  b1_loco_example_client.cpp  b1_loco_example_client.py
example/low_level/: b1_7dof_arm_low_sdk_example.cpp  b1_low_sdk_example.cpp  low_level_publisher.cpp  low_level_publisher.py  low_level_subscriber.cpp  odometer_example.cpp
include/booster/idl/b1/: FallDownState.h  ImuState.h  ImuStateCdrAux.hpp  LowCmd.h  LowCmdCdrAux.hpp  LowState.h  LowStateCdrAux.hpp  MotorCmd.h  MotorCmdCdrAux.hpp  MotorState.h  MotorStateCdrAux.hpp  Odometer.h  OdometerCdrAux.hpp  RemoteControllerState.h  RobotDdsBatteryStatus.h  RobotDdsBatteryStatusCdrAux.hpp  RobotDdsImuStatus.h  RobotDdsImuStatusCdrAux.hpp  RobotDdsJointStatus.h  RobotDdsJointStatusCdrAux.hpp  RobotProcessState.h  RobotProcessStateCdrAux.hpp  RobotProcessStateMsg.h  RobotProcessStateMsgCdrAux.hpp  RobotStatusDdsMsg.h  RobotStatusDdsMsgCdrAux.hpp
include/booster/robot/b1/: b1_api_const.hpp  b1_loco_api.hpp  b1_loco_client.hpp
include/booster/robot/channel/: channel_publisher.hpp  channel_subscriber.hpp
include/booster/robot/common/: entities.hpp  robot_mode.hpp
include/booster/robot/rpc/: rpc_client.hpp  rpc_server.hpp
include/booster/robot/rpc/msg/: bs_rpc_req_msg.h  bs_rpc_req_msgCdrAux.hpp  bs_rpc_resp_msg.h  bs_rpc_resp_msgCdrAux.hpp
python/: binding.cpp
